Changing row vectors to column vectors

--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -1520,7 +1520,9 @@ $\vec{v}_1 = \hathat{W}^* \cdot \vec{m}_1 = \begin{bmatrix}
 1 & 8 & 13 & 2\\
 1 & 2 & 4 & 8\\
 1 & 15 & 4 & 9\\
-\end{bmatrix} \cdot (12, 11, 12, 1) = (10, 3, 5, 13) \pmod{17}$
+\end{bmatrix} \cdot \begin{bmatrix}
+12\\11\\12\\1
+\end{bmatrix} = (10, 3, 5, 13) \pmod{17}$
 
 $ $
 
@@ -1529,14 +1531,14 @@ $\vec{v}_2 = \hathat{W}^* \cdot \vec{m}_2 = \begin{bmatrix}
 1 & 8 & 13 & 2\\
 1 & 2 & 4 & 8\\
 1 & 15 & 4 & 9\\
-\end{bmatrix} \cdot (8, 5, 14, 6) = (2, 4, 3, 6) \pmod{17}$
+\end{bmatrix} \cdot \begin{bmatrix}8\\5\\14\\6\end{bmatrix} = (2, 4, 3, 6) \pmod{17}$
 
 $\vec{v}_{1+2} = \hathat{W}^* \cdot \vec{m}_{1+2} = \begin{bmatrix}
 1 & 9 & 13 & 15\\
 1 & 8 & 13 & 2\\
 1 & 2 & 4 & 8\\
 1 & 15 & 4 & 9\\
-\end{bmatrix} \cdot (20, 16, 26, 7) = (12, 7, 8, 2) \pmod{17}$
+\end{bmatrix} \cdot \begin{bmatrix}20\\16\\26\\7\end{bmatrix} = (12, 7, 8, 2) \pmod{17}$
 
 $ $
 
@@ -1731,7 +1733,15 @@ $\vec{v}_{J(3)} = \hathat{W}^* \cdot \vec{m}_{J(3)} = \begin{bmatrix}
 1&7&15&3&4&11&9&12\\
 1&11&2&5&4&10&8&3\\
 1&10&15&14&4&6&9&5\\
-\end{bmatrix} \cdot (13, 12, -10, -2, 18, -32, -14, 10) $
+\end{bmatrix} \cdot \begin{bmatrix}
+13\\
+12\\
+-10\\
+-2\\
+18\\
+-32\\
+-14\\
+10\end{bmatrix}$
 
 $= (4, 1, 2, 3, 8, 5, 6, 7) \pmod{17}$
 
