URL display error fix

--- a/00-main.tex
+++ b/00-main.tex
@@ -81,7 +81,7 @@
 \usepackage{booktabs}
 \usepackage{arydshln}
 \usepackage{xcolor}
-\def\UrlBreaks{\do\/\do-}
+\def\UrlBreaks{\do\/\do-\do\_}
 \usepackage{mathtools}  
 \usepackage{array}
 \usepackage{hyperref}
