Updates from Overleaf

--- a/b06-ggsw.tex
+++ b/b06-ggsw.tex
@@ -5,7 +5,7 @@ The GGSW cryptosystem is a list of GLev ciphertexts. In the GGSW cryptosystem, t
 \label{subsec:ggsw-enc}
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:ggsw-enc}} GGSW Encryption}}]
-$\textsf{GGSW}_{S, \sigma}^{\beta, l}(M) = \Bigr \{ \{ \textsf{GLev}_{S, \sigma}^{\beta, l}(-S_i \cdot M)  \}_{i=0}^{k-1}, \textsf{GLev}_{S, \sigma}^{\beta, l}(M) \Bigl \} \in \mathcal{R}_{\langle n, q \rangle }^{(k+1) \cdot l \cdot (k+1)}$
+$\textsf{GGSW}_{S, \sigma}^{\beta, l}(M) = \Bigl \{ \{ \textsf{GLev}_{S, \sigma}^{\beta, l}(-S_i \cdot M)  \}_{i=0}^{k-1}, \textsf{GLev}_{S, \sigma}^{\beta, l}(M) \Bigr \} \in \mathcal{R}_{\langle n, q \rangle }^{(k+1) \cdot l \cdot (k+1)}$
 \end{tcolorbox}
 
 \begin{figure}[h!]
